# rust-sse

./: Cargo.toml  build.rs
examples/: axum_sse_server.rs  multicast.rs  sse_to_ws.rs
proto/: bridge.proto
rust-sse/: README.md
rust-sse/src/: parser.rs
src/: client.rs  error.rs  event.rs  lib.rs  parser.rs
src/bridge/: event.rs  mod.rs  sink.rs  source.rs
src/multicast/: broadcaster.rs  fanout.rs  mod.rs
src/server/: axum.rs  mod.rs
src/sinks/: grpc.rs  mod.rs  sse.rs  websocket.rs
src/sources/: grpc.rs  mod.rs  sse.rs  websocket.rs
tests/: integration_test.rs
